#
# Copyright 2017 The Abseil Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This package contains `absl::Status`.
# It will expand later to have utilities around `Status` like `StatusOr`,
# `StatusBuilder` and macros.

load(
    "//tink/absl:copts/configure_copts.bzl",
    "ABSL_DEFAULT_COPTS",
    "ABSL_DEFAULT_LINKOPTS",
    "ABSL_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "status",
    srcs = [
        "internal/status_internal.h",
        "status.cc",
        "status_payload_printer.cc",
    ],
    hdrs = [
        "status.h",
        "status_payload_printer.h",
    ],
    copts = ABSL_DEFAULT_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        "//tink/absl/base:atomic_hook",
        "//tink/absl/base:core_headers",
        "//tink/absl/base:raw_logging_internal",
        "//tink/absl/base:strerror",
        "//tink/absl/container:inlined_vector",
        "//tink/absl/debugging:stacktrace",
        "//tink/absl/debugging:symbolize",
        "//tink/absl/functional:function_ref",
        "//tink/absl/strings",
        "//tink/absl/strings:cord",
        "//tink/absl/strings:str_format",
        "//tink/absl/types:optional",
    ],
)

cc_test(
    name = "status_test",
    srcs = ["status_test.cc"],
    copts = ABSL_TEST_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        ":status",
        "//tink/absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "statusor",
    srcs = [
        "internal/statusor_internal.h",
        "statusor.cc",
    ],
    hdrs = [
        "statusor.h",
    ],
    copts = ABSL_DEFAULT_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        ":status",
        "//tink/absl/base",
        "//tink/absl/base:core_headers",
        "//tink/absl/base:raw_logging_internal",
        "//tink/absl/meta:type_traits",
        "//tink/absl/strings",
        "//tink/absl/types:variant",
        "//tink/absl/utility",
    ],
)

cc_test(
    name = "statusor_test",
    size = "small",
    srcs = ["statusor_test.cc"],
    deps = [
        ":status",
        ":statusor",
        "//tink/absl/base",
        "//tink/absl/memory",
        "//tink/absl/strings",
        "//tink/absl/types:any",
        "//tink/absl/utility",
        "@com_google_googletest//:gtest_main",
    ],
)
